--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -53,6 +53,20 @@ header {
   height: 100%;
 }
 
+.shadow-hover {
+  transition: all 0.3s ease-in-out;
+}
+
+.shadow-hover:hover {
+  box-shadow: 0px 0px 40px 5px rgba(0, 0, 0, 0.25);
+  z-index: 99;
+  -webkit-transform:scale(1.005); /* Safari and Chrome */
+    -moz-transform:scale(1.005); /* Firefox */
+    -ms-transform:scale(1.005); /* IE 9 */
+    -o-transform:scale(1.005); /* Opera */
+     transform:scale(1.005);
+}
+
 .col-sm-6 h2 {
   position: relative;
 }
@@ -101,6 +115,9 @@ header {
 .nav-arrow,
 .home-arrow {
   font-size: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 #narratives .row, #the-administration .row, #resources .row, #wellness .row{
