DP and 34th logos

--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -56,6 +56,13 @@ header {
 	text-align: center;
 }
 
+.logo {
+	height: 30px;
+	width: auto;
+	padding: 5px;
+}
+
+
 .header-bar .row{
 	text-align: center;
 }
