--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -8,16 +8,18 @@
          url('fonts/BebasNeue.svg#BebasNeue') format('svg');
     font-weight: normal;
     font-style: normal;
-    
+
 }
 
 body {
   overflow-x: hidden;
-  background-color: #36454f;
+  background-color: #AFCFCE;
   color: white;
   font-family: 'BebasNeue', Fallback, sans-serif;
 }
-
+img {
+  max-width: 100%;
+}
 main {
   width: 100vw;
   position: relative;
@@ -36,6 +38,7 @@ a:hover, a:active {
 
 
 #title {
+  color: #3C3C3C;
 	min-height: 100vh;
 	width: 100%;
 }
@@ -50,7 +53,7 @@ h1 {
 
 header {
 	width: 100%;
-	background-color: #36454f;
+	background-color: #3C3C3C;
   border-bottom: 1px solid #fff;
 	height: auto;
 	text-align: center;
@@ -111,7 +114,7 @@ footer {
 }
 
 .section-header section:nth-child(1) {
-  background-color: #36454f;
+  background-color: #368879;
 }
 
 .section-header section:nth-child(2) h2 {
@@ -120,11 +123,11 @@ footer {
 }
 
 .section-header section:nth-child(2) {
-  background-color: #6e7f80;
+  background-color: #99B6A0;
 }
 
 .section-header section:nth-child(3) {
-  background-color: #708090;
+  background-color: #0D3D49;
 }
 
 .section-header section:nth-child(3) h2,
@@ -134,7 +137,7 @@ footer {
 }
 
 .section-header section:nth-child(4) {
-  background-color: #536878;
+  background-color: #2A7595;
 }
 
 .section-header section:nth-child(4) h2 {
@@ -165,19 +168,19 @@ footer {
 }
 
 #narratives {
-	background-color: #36454f;
+	background-color: #368879;
 }
 
 #the-administration {
-	background-color: #6e7f80;
+	background-color: #99B6A0;
 }
 
 #resources {
-	background-color: #708090;
+	background-color: #0D3D49;
 }
 
 #wellness {
-	background-color: #536878;
+	background-color: #2A7595;
 }
 
 .section-title {
