--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -216,7 +216,8 @@ footer {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
+	height: auto;
 	visibility: hidden;
 	z-index: 1;
 }
