--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -90,6 +90,10 @@ footer {
   height: 50vh;
 }
 
+.section-header img {
+  /*width: 70%; */
+}
+
 .section-header .col-sm-6 {
   height: 100%;
 }
@@ -158,7 +162,25 @@ footer {
 
 .nav-arrow,
 .home-arrow {
-  font-size: 60px;
+  font-size: 40px;
+}
+
+.nav-arrow img {
+  height: 23px;
+  margin: 12px;
+  vertical-align: middle;
+}
+
+img.tr {
+  transform: rotate(90deg);
+}
+
+img.bl {
+  transform: rotate(-90deg);
+}
+
+img.br {
+  transform: rotate(180deg);
 }
 
 .home-arrow {
