--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -173,7 +173,8 @@ footer {
 
 .nav-arrow,
 .home-arrow {
-  font-size: 40px;
+  font-size: 30px;
+  font-family: 'BebasNeue', sans-serif;
 }
 
 .nav-arrow img {
