--- a/2017/10/mental-health/style.css
+++ b/2017/10/mental-health/style.css
@@ -37,12 +37,11 @@ a {
 	color: inherit;
 }
 
-a:hover, a:active {
+a:focus, a:hover, a:active {
 	text-decoration: none;
 	color: inherit;
   cursor: pointer;
 }
-
 
 #title {
   color: #3C3C3C;
@@ -486,6 +485,7 @@ img.br {
   .container {
     height: auto;
   }
+
   .section-header h2 {
     padding-top: 15px;
   }
@@ -495,6 +495,7 @@ img.br {
     margin-top: 5px;
     margin: 5px;
   }
+
   .section-header .row {
     height: auto;
   }
