--- a/2017/11/basketball-preview/css/style.css
+++ b/2017/11/basketball-preview/css/style.css
@@ -86,7 +86,6 @@ img {
 
 .statbox {
   background-color: #5a628c;
-  max-width: 325px;
   color: #fff;
   height: 85px;
   margin-bottom: 25px;
@@ -113,7 +112,7 @@ img {
 .statbox .desc {
   font-weight: 300;
   font-size: 20px;
-  letter-spacing: 8px;
+  letter-spacing: 5px;
 }
 
 .statbox.big .desc {
@@ -122,7 +121,48 @@ img {
   color: #DF1E35;
 }
 
+.statbox.tall {
+  height: 100px;
+}
 
+.statbox.tall::after {
+  content: '';
+  position: relative;
+  z-index: 0;
+  width: 0;
+  top: -175%;
+  right: -50%;
+  border-top: 100px solid #0D3876;
+  border-left: 75px solid transparent;
+  padding: 22%;
+  z-index: 10;
+}
+
+.statbox.tall .col-xs-2.num {
+  padding-top: 10px;
+}
+
+.statbox.tall .col-xs-6 {
+  z-index: 50;
+  text-align: right;
+  color: #DF1E35;
+}
+
+.statbox.tall .col-xs-6.num {
+  font-size: 2.4rem;
+}
+
+.ross-img, .nwo-img {
+  position: relative;
+}
+
+.ross-img {
+  left: -200px;
+}
+
+.nwo-img {
+  left: -35px;
+}
 @keyframes spin {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
@@ -144,6 +184,15 @@ img {
     border-radius: 50%;
     animation: spin 90s infinite linear;
     z-index: 10;
+}
+
+#ilana-credit {
+  position: absolute;
+  z-index: 20;
+  transform: rotate(-90deg);
+  transform-origin: 0 0;
+  top: 297px;
+  left: 339px;
 }
 
 .spinner::after {
