--- a/2017/11/basketball-preview/css/style.css
+++ b/2017/11/basketball-preview/css/style.css
@@ -362,8 +362,33 @@ span.teams {
   font-size: 2.8rem;
 }
 
+
+.links {
+  margin-left: 30px;
+  margin-right: 15px;
+}
+
+.links a {
+  display: inline-block;
+  font-size: 22px;
+  color: #0D3876;
+}
+
+.links a::before {
+  content: '◆';
+  color: #df1e35;
+  font-size: 40px;
+  top: 3px;
+  position: relative;
+}
+
+.links a:hover, a:active, a:focus {
+  text-decoration: none;
+  display: block;
+}
+
 @media screen and (max-width: 500px) {
-  .logo {
+  .logo, .school {
     display: none;
   }
 }
