--- a/2017/11/basketball-preview/css/style.css
+++ b/2017/11/basketball-preview/css/style.css
@@ -41,6 +41,11 @@ header {
   padding-bottom: 10px;
 }
 
+footer {
+  padding: 20px;
+  text-align: center;
+}
+
 section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -228,6 +233,7 @@ img.dp-logo {
 .school img {
   max-width: 100%;
   align-self: center;
+  margin: auto;
 }
 
 h2.key-title {
@@ -320,7 +326,7 @@ span.teams {
   padding-bottom: 15px;
 }
 
-.poll .row::before {
+.poll .place::before {
   content: '';
   position: absolute;
   z-index: 0;
@@ -349,6 +355,7 @@ span.teams {
 
 .logo img {
   margin: auto;
+  max-height: 50px;
 }
 
 .col-lg-6 {
@@ -411,7 +418,7 @@ span.teams {
 }
 
 @media screen and (max-width: 500px) {
-  .logo, .school, .position {
+  .logo, .position {
     display: none;
   }
 
