--- a/2017/12/year-in-review/style.css
+++ b/2017/12/year-in-review/style.css
@@ -46,11 +46,6 @@ section {
   width: 70%;
 }
 
-.articles {
-  flex-direction: column;
-  align-items: center;
-}
-
 .grid {
   position: relative;
   margin: auto;
@@ -66,6 +61,10 @@ section {
   border: 1px solid #d3d3d3;
   border-radius: 8px;
   overflow: hidden;
+}
+
+.item p {
+  margin: 0;
 }
 
 .item.content-h {
@@ -92,7 +91,7 @@ section {
 
 .item-content {
   position: relative;
-  padding: 15px;
+  padding: 10px;
 }
 
 .item.content-h .image {
